Jenkins is hooked up and proxied successfully through Apache!

--- a/templates/default/apache_secure_conf.erb
+++ b/templates/default/apache_secure_conf.erb
@@ -2,8 +2,13 @@
   SSLCertificateFile /etc/httpd/ssl/server.crt
   SSLCertificateKeyFile /etc/httpd/ssl/server.key
   SSLEngine on
+
+  ProxyPreserveHost On
+  ProxyRequests Off
+
   ServerAdmin ops@example.com
   DocumentRoot /vagrant/web/secure
+
   <Directory />
     Options Indexes FollowSymLinks MultiViews
     AllowOverride All
@@ -11,10 +16,18 @@
     allow from all
   </Directory>
 
+  <Proxy http://127.0.0.1:8081>
+     Order allow,deny
+     Allow from all
+  </Proxy>
+
+  ProxyPass /jenkins http://127.0.0.1:8081/jenkins
+  ProxyPassReverse /jenkins http://127.0.0.1:8081/jenkins
+  ProxyRequests     Off
+
   ErrorLog /var/log/httpd/secure-error.log
   LogLevel warn
   CustomLog /var/log/httpd/secure-access.log combined
   ServerSignature On
 
 </VirtualHost>
-
