--- a/templates/default/apache_secure_conf.erb
+++ b/templates/default/apache_secure_conf.erb
@@ -17,6 +17,7 @@
   ProxyRequests Off
   AllowEncodedSlashes On
 
+  # Jenkins
   <Proxy http://127.0.0.1:8081/jenkins*>
      Order allow,deny
      Allow from all
@@ -24,6 +25,16 @@
 
   ProxyPass /jenkins http://127.0.0.1:8081/jenkins nocanon
   ProxyPassReverse /jenkins http://127.0.0.1:8081/jenkins
+
+  # Tomcat
+  <Proxy http://127.0.0.1:8080/*>
+     Order allow,deny
+     Allow from all
+  </Proxy>
+
+  ProxyPass /api http://127.0.0.1:8080 nocanon
+  ProxyPassReverse /api http://127.0.0.1:8080
+
   RequestHeader set X-Forwarded-Proto "https"
   RequestHeader set X-Forwarded-Port "443"
 
